# arquitectura_labs

./: .gitignore  README.md
lab1/1/: CMakeLists.txt  hello.cpp  hello.ii
lab1/2/: CMakeLists.txt  geom.cpp  geom.hpp  main.cpp
lab1/3/: main.cpp  primitive_vecnum.hpp
lab1/4/: CMakeLists.txt  main.cpp  primitive_vecnum.hpp
lab2/: run-par-mandel.sh  run-seq-mandel.sh  runpy.sh  script.sh
lab2/mandel/: CMakeLists.txt  mandel-par.cpp  mandel.cpp
lab2/mandel-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  mandel  mandel-par
lab2/mandel-release/: CMakeCache.txt  Makefile  cmake_install.cmake  mandel  mandel-par
lab3/cache/: aos.cpp  loop_merge.cpp  loop_merge_opt.cpp  script_loop_merge.sh  script_soa_aos.sh  soa.cpp
lab4/: CMakeLists.txt  expar.cpp  exseq.cpp  pipar.cpp  piseq.cpp  piseqtime.cpp
lab5/image/: CMakeLists.txt  build-stan.out  build-stan.sh  build.out  build.sh  lscpu.out  lscpu.sh  run-gray-omp-stan.out  run-gray-omp-stan.sh  run-gray-stan.out  run-gray-stan.sh  run-gray.out  run-gray.sh  run-histo-omp-stan.out  run-histo-omp-stan.sh  run-histo-stan.out  run-histo-stan.sh  run-histo.out  run-histo.sh  script.sh
lab6/counter-spin-ra-opt/: CMakeLists.txt  build-debug-tsan.out  build-release-tsan.out  build-release-tsan.sh  counter-debug-tsan.sh  counter-release-tsan.out  counter-release-tsan.sh  counter_spin_ra_opt.cpp
lab6/counter-tsan-mutex/: CMakeLists.txt  build-debug-tsan.out  build-release-tsan.out  counter-debug-tsan.out  counter-debug-tsan.sh  counter-release-tsan.out  counter-release-tsan.sh  counter_mutex.cpp
lab6/counter-tsan-mutex/build-debug-tsan/: CMakeCache.txt  Makefile  cmake_install.cmake  counter_mutex
lab6/counter-tsan-mutex/build-release-tsan/: CMakeCache.txt  Makefile  cmake_install.cmake  counter_mutex
(+173 files in other folders)
